--- a/login.html
+++ b/login.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body>
+<body class="theme-dark">
     <div class="body-wrapper">
        <div class="login-wrapper">
             <div class="login-left-block">
                 <div class="logo-section-block">
                   <img src="img/login-blue.svg" class="logo-img">
+                  <img src="img/logo-white.svg" class="logo-img d-none">
                  <div class="welcome-text">
                     Welcome to <span> Propbase</span>
                     <h4>The future of Real Estate Investing!</h4>
