--- a/staking.html
+++ b/staking.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="css/staking.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
+    
 </head>
-<body>
+<body class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
