--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body>
+<body class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
