--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
                                 <span class="nav-label">Support</span>
                             </a>
                         </li>
+                        <li class="nav-item nav-item-logout">
+                            <div class="nav-link" href="#">
+                                <img src="img/dark-mode.svg" alt="">
+                                <span class="nav-label">Dark Mode</span>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                                    <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
 
                     <div class="mob-nav-btn-block">
