--- a/staking.html
+++ b/staking.html
@@ -190,13 +190,18 @@
                     <div class="total-value-outer">
                         <div class="stake-tot-locked">
                             <h3>
-                                <span class="img-sec"><img src="img/grph-img.svg"></span>
+                                <span class="img-sec">
+                                    <img src="img/grph-img.svg" class="img-lock-white">
+                                </span>
                                 <span class="txt-sec">
                                     Percentage of 
                                     <br/>
                                     Circulating supply
                                 </span>
                             </h3>
+                            <div class="text-percent-count">
+                                23%
+                            </div>
                         </div>
                         <div class="tot-detl-outer">
                              <div class="total-inner">
@@ -230,7 +235,8 @@
                         <!-- No data -->
                         <div class="table-no-data w-100">
                             <div class="img-block">
-                                <img src="img/no-data.svg" alt="">
+                                <img src="img/no-data.svg" alt="" class="no-data-img">
+                                <img src="img/no-data-black.svg" alt="" class="no-data-img d-none">
                             </div>
                             <p>NO DATA FOUND</p>
                         </div>
@@ -238,6 +244,10 @@
                             <div class="col-md-4 h-card-col">
                                 <div class="h-card-block">
                                     <div class="top-block">
+                                        <div class="icon-head-top d-flex">
+                                            <img src="img/certik.svg" class="img-icon img-icon-white">
+                                            <img src="img/icon-white-per.svg" class="img-icon d-none">
+                                        </div>
                                         <div class="heading-txt">
                                             <div class="img-txt">
                                                 <img src="img/stake-img-1.svg">
@@ -364,6 +374,10 @@
                             <div class="col-md-4 h-card-col">
                                 <div class="h-card-block">
                                     <div class="top-block">
+                                        <div class="icon-head-top d-flex">
+                                            <img src="img/certik.svg" class="img-icon img-icon-white">
+                                            <img src="img/icon-white-per.svg" class="img-icon d-none">
+                                        </div>
                                         <div class="heading-txt">
                                             <div class="img-txt">
                                                 <img src="img/stake-img-1.svg">
@@ -493,6 +507,10 @@
                             <div class="col-md-4 h-card-col">
                                 <div class="h-card-block">
                                     <div class="top-block">
+                                        <div class="icon-head-top d-flex">
+                                            <img src="img/certik.svg" class="img-icon img-icon-white">
+                                            <img src="img/icon-white-per.svg" class="img-icon d-none">
+                                        </div>
                                         <div class="heading-txt">
                                             <div class="img-txt">
                                                 <img src="img/stake-img-1.svg">
