--- a/create-stake.html
+++ b/create-stake.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body>
+<body class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -306,7 +307,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img src="img/td-edit.svg" alt="">
+                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
@@ -334,7 +335,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img src="img/td-edit.svg" alt="">
+                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
@@ -362,7 +363,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img src="img/td-edit.svg" alt="">
+                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
@@ -376,7 +377,7 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr class="tr-completed">
                                     <td>Long Term</td>
                                     <td>08/29/2023</td>
                                     <td class="text-dark text-b">233.02</td>
@@ -390,7 +391,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img src="img/td-edit.svg" alt="">
+                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
