--- a/create-stake.html
+++ b/create-stake.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body>
+<body class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
