--- a/create-stake.html
+++ b/create-stake.html
@@ -307,7 +307,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
+                                                <img src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
@@ -335,7 +335,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
+                                                <img src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
@@ -363,7 +363,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
+                                                <img src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
@@ -377,7 +377,7 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr class="tr-completed">
+                                <tr>
                                     <td>Long Term</td>
                                     <td>08/29/2023</td>
                                     <td class="text-dark text-b">233.02</td>
@@ -391,7 +391,7 @@
                                     <td>
                                         <div class="action-btn-block">
                                             <button class="td-action-btn">
-                                                <img class="edit-icon" src="img/td-edit.svg" alt="">
+                                                <img src="img/td-edit.svg" alt="">
                                             </button>
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
