--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body class="theme-dark">
+<body>
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -406,7 +406,8 @@
                                                     <td>35</td>
                                                     <td>
                                                         <div class="btn-stakes">
-                                                        <button class="btn-def claim-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Claim</button>
+                                                            <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
+                                                            <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
                                                         </div>
                                                     </td>
                                                 </tr>
