header mail adn portfolio

--- a/index.html
+++ b/index.html
@@ -150,7 +150,17 @@
                         <span class="info-val">$0.0035</span>
                         <span class="info-val info-val-end">03.54%</span>
                     </div>
-                    <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button>
+
+                    <div class="buy-pros-block">
+                        <span class="pros-label">Buy $PROPS</span>
+                        <a href="#" class="buy-pros-btn">
+                            <img src="img/pancake.svg" alt="">
+                        </a>
+                        <a href="#" class="buy-pros-btn">
+                            <img src="img/mexc.svg" alt="">
+                        </a>
+                    </div>
+                    <!-- <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button> -->
                     <div class="wallet-btn-cover wallet-btn-cover-web">
                         <!-- <button class="wallet-btn" data-bs-toggle="modal" data-bs-target="#walletModal">Connect Wallet</button> -->
                         <button class="wallet-btn wallet-btn-connected" data-bs-toggle="modal" data-bs-target="#walletModal">0xf7e2...1380bf</button>
@@ -158,7 +168,7 @@
                             <img src="img/copy.svg" alt="">
                         </button>
                     </div>
-                    <button class="login-btn header-btn-web"><span class="acc-label">Admin Login</span> <img src="img/user.svg" alt=""></button>
+                    <!-- <button class="login-btn header-btn-web"><span class="acc-label">Admin Login</span> <img src="img/user.svg" alt=""></button> -->
                     <!-- Admin btn -->
                     <div class="admin-h-btn-block d-flex">
                         <div class="btn-group notify-dropdown">
