--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body>
+<body class="">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -140,7 +140,17 @@
                         <span class="info-val">$0.0035</span>
                         <span class="info-val info-val-end">03.54%</span>
                     </div>
-                    <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button>
+
+                    <div class="buy-pros-block">
+                        <span class="pros-label">Buy $PROPS</span>
+                        <a href="#" class="buy-pros-btn">
+                            <img src="img/pancake.svg" alt="">
+                        </a>
+                        <a href="#" class="buy-pros-btn">
+                            <img src="img/mexc.svg" alt="">
+                        </a>
+                    </div>
+
                     <div class="wallet-btn-cover wallet-btn-cover-web">
                         <button class="wallet-btn">0xf7e2...1380bf</button>
                         <button class="wallet-btn-copy copy-btn">
@@ -489,7 +499,10 @@
                                     </div>
                                 </div>
                                 <div class="content-block">
-                                    <img style="margin: 0 auto;" src="img/graph2.png" alt="">
+                                    <div class="tokenomics-graph-block">
+                                        <img class="img-light" src="img/chart-stake-light.svg" alt="">
+                                        <img class="img-dark" src="img/chart-stake-dark.svg" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
