--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
                 <div class="card-sec">
                     <div class="row">
-                        <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 h-card-col">
+                        <div class="col-xl-4 col-lg-6  col-sm-6 h-card-col">
                             <div class="h-card-block">
                                 <div class="top-block">
                                     <div class="img-block">
@@ -305,7 +305,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 h-card-col">
+                        <div class="col-xl-4 col-lg-6  col-sm-6 h-card-col">
                             <div class="h-card-block">
                                 <div class="top-block">
                                     <div class="img-block">
@@ -321,7 +321,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 h-card-col">
+                        <div class="col-xl-4 col-lg-6  col-sm-6 h-card-col">
                             <div class="h-card-block">
                                 <div class="top-block">
                                     <div class="img-block">
