--- a/email/email.html
+++ b/email/email.html
@@ -148,6 +148,11 @@
 
     <!-- Progressive Enhancements : BEGIN -->
     <style>
+        @media screen and (max-width: 579px) {
+            .body-td{
+                padding: 25px 15px !important;
+            }
+        }
 
 	    /* Media Queries */
 	    @media screen and (max-width: 480px) {
@@ -260,7 +265,7 @@
                             <!-- Clear Spacer : END -->
 
                             <tr>
-                                <td style="background: #fff; padding: 40px; border-top: solid 5px #C9C9C9;">
+                                <td class="body-td" style="background: #fff; padding: 40px; border-top: solid 5px #C9C9C9;">
                                     <h4 style="font-family: 'Poppins', sans-serif; color: #292D32; font-size: 20px; font-weight: 600; margin: 0; margin-bottom: 25px;">Hi Admin,</h4>
                                     <div style="display:block; text-align: center;">
                                         <img src="img/stake.png" alt="" width="160">
@@ -269,7 +274,7 @@
                                         We wanted to inform you that a user has recently made a stake in <span style="font-weight: 600;">[Stake Name]</span> on our platform.
                                     </p>
                                     <div style="box-sizing: border-box; width: 100%; margin-top: 20px;">
-                                        <table style="width: 100%;font-family: 'Poppins', sans-serif;">
+                                        <table style="width: 100%;font-family: 'Poppins', sans-serif; word-break: break-word;">
                                             <tbody>
                                                 <tr>
                                                     <td style="padding: 10px 0; color: #575757; font-size: 13px; font-weight: 500; border-bottom: solid 1px #EDEDED;">
