--- a/email/email.html
+++ b/email/email.html
@@ -270,7 +270,7 @@
                                     <div style="display:block; text-align: center;">
                                         <img src="img/stake.png" alt="" width="160">
                                     </div>
-                                    <p style="font-family: 'Poppins', sans-serif; color: #000; font-size: 14px; margin-top: 30px; margin-bottom: 30px; line-height: 2;">
+                                    <p style="font-family: 'Poppins', sans-serif; color: #000 !important; font-size: 14px; margin-top: 30px; margin-bottom: 30px; line-height: 2;">
                                         We wanted to inform you that a user has recently made a stake in <span style="font-weight: 600;">[Stake Name]</span> on our platform.
                                     </p>
                                     <div style="box-sizing: border-box; width: 100%; margin-top: 20px;">
