--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -557,9 +557,17 @@
                                         </table>
                                     </div>
                                     <div class="table-pagination-cover">
-                                        <div class="entries-block">
-                                            Showing 1 to 5 of 20 entries
+                                        <div class="select-block">
+                                            Rows per page
+                                            <select class="pagination-select" name="" id="">
+                                                <option value="">10</option>
+                                                <option value="">2</option>
+                                                <option value="">3</option>
+                                            </select>
                                         </div>
+                                        <!-- <div class="entries-block">
+                                            Showing 1 to 5 of 20 entries
+                                        </div> -->
                                         <div class="pagination-block">
                                             <nav aria-label="Page">
                                                 <ul class="pagination">
