--- a/staking.html
+++ b/staking.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/dark-theme.css">
     
 </head>
-<body class="theme-dark">
+<body class="">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -194,8 +194,8 @@
                                     <img src="img/grph-img.svg" class="img-lock-white">
                                 </span>
                                 <span class="txt-sec">
-                                    Percentage of 
-                                    <br/>
+                                    <!-- Percentage of 
+                                    <br/> -->
                                     Circulating supply
                                 </span>
                             </h3>
