staking success modal and Buy pros

--- a/create-stake.html
+++ b/create-stake.html
@@ -408,7 +408,8 @@
                                 <td colspan="11">
                                     <div class="table-no-data">
                                         <div class="img-block">
-                                            <img src="img/no-data.svg" alt="">
+                                            <img src="img/no-data.svg" alt="" class="no-data-img">
+                                            <img src="img/no-data-black.svg" alt="" class="no-data-img d-none">
                                         </div>
                                         <p>NO DATA FOUND</p>
                                     </div>
