--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <span class="info-val info-val-end">03.54%</span>
                     </div>
 
-                    <div class="buy-pros-block">
+                    <!-- <div class="buy-pros-block">
                         <span class="pros-label">Buy $PROPS</span>
                         <a href="#" class="buy-pros-btn">
                             <img src="img/pancake.svg" alt="">
@@ -159,6 +159,30 @@
                         <a href="#" class="buy-pros-btn">
                             <img src="img/mexc.svg" alt="">
                         </a>
+                    </div> -->
+                    <div class="buy-pros-select-block">
+                        <div class="btn-group buy-pros-dropdown">
+                            <button type="button" class="buy-pros-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img class="cart-mob" src="img/buy_token.svg" alt="">
+                                <span class="acc-label">Buy $PROPS</span>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li>
+                                    <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
+                                        <span class="icon">
+                                            <img src="img/pros-mex.svg" alt="">
+                                        </span> MEXC
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                        <span class="icon">
+                                            <img src="img/pros-pan.svg" alt="">
+                                        </span> Pancake
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button> -->
                     <div class="wallet-btn-cover wallet-btn-cover-web">
