--- a/staking.html
+++ b/staking.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/dark-theme.css">
     
 </head>
-<body class="">
+<body class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -882,7 +882,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="text-center">
+                        <div class="text-center success-btn-block">
+                            <button class="btn-border"><img src="img/aptos-exp.svg" alt=""> View in Aptos Explorer</button>
                             <button class="btn-black">Ok</button>
                         </div>
                     </div>
