--- a/staking.html
+++ b/staking.html
@@ -380,7 +380,7 @@
                                         </div>
                                         <div class="heading-txt">
                                             <div class="img-txt">
-                                                <img src="img/stake-img-1.svg">
+                                                <img src="img/avtr-4.svg">
                                             </div>
                                             <div class="desc-content">
                                                 <h2>Long Term Staking Pool</h2>
