--- a/staking.html
+++ b/staking.html
@@ -789,7 +789,7 @@
                             <div class="prop-sec">
                                 <span class="prop-label">Unstake $PROPS</span>
                             </div>
-                            <div class="props-col">1354.546546</div>
+                            <div class="props-col withdraw-cnt">1354.546546</div>
                         </div>
                         <div class="detail-outer">
                             <div class="img-sec">
@@ -798,7 +798,7 @@
                             <div class="prop-sec">
                                 <span class="prop-label">Penalty (5%)</span>
                             </div>
-                            <div class="props-col">5.564564 $PROPS</div>
+                            <div class="props-col penalty-cnt">5.564564 $PROPS</div>
                         </div>
                         <div class="detail-outer">
                             <div class="img-sec">
