--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -185,11 +185,13 @@
                                     <div class="graph-title-block d-flex">
                                         <div class="graph-title">
                                             <div class="g-logo">
-                                                <img src="img/coin-logo.svg" alt="">
+                                                <span class="g-logo-block">
+                                                    <img src="img/logo-img-coin.svg" alt="">
+                                                </span>
                                             </div>
                                             <div class="graph-det">
                                                 <p class="g-label">$Props Price</p>
-                                                <p class="g-rate">$0.0035 <span>03.54% (1W)</span></p>
+                                                <p class="g-rate">$0.0035 <span class="decs">03.54% (1W)</span> <span class="incs">03.54% (1W)</span></p>
                                             </div>
                                         </div>
                                         <div class="g-filter-block">
