--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body class="theme-dark">
+<body class="">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
