--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -191,7 +191,10 @@
                                             </div>
                                             <div class="graph-det">
                                                 <p class="g-label">$Props Price</p>
-                                                <p class="g-rate">$0.0035 <span class="decs">03.54% (1W)</span> <span class="incs">03.54% (1W)</span></p>
+                                                <p class="g-rate">$0.0035 
+                                                    <span class="decs"><img src="img/pros-dwn.svg" alt=""> 03.54% (1W)</span>
+                                                    <span class="incs"><img src="img/pros-dwn.svg" alt=""> 03.54% (1W)</span>
+                                                </p>
                                             </div>
                                         </div>
                                         <div class="g-filter-block">
