--- a/staking.html
+++ b/staking.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/staking.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/dark-theme.css">
     
 </head>
@@ -1026,6 +1027,42 @@
                                             
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="table-pagination-cover">
+                                <div class="select-block">
+                                    Rows per page
+                                    <select class="pagination-select" name="" id="">
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                    </select>
+                                </div>
+                                <div class="entries-block">
+                                    Showing 1 to 10 of 39 entries
+                                </div>
+                                <div class="pagination-block">
+                                    <nav aria-label="Page">
+                                        <ul class="pagination">
+                                            <li class="page-item">
+                                                <a class="page-link" href="#" aria-label="Previous">
+                                                    <img src="img/arw-left.svg" alt="">
+                                                </a>
+                                            </li>
+                                            <li class="page-item"><a class="page-link active" href="#">1</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                            <li class="page-item"><span class="page-link-dots">&#183;&#183;&#183;</span></li>
+                                            <li class="page-item"><a class="page-link" href="#">10</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">11</a></li>
+                                            <li class="page-item">
+                                                <a class="page-link" href="#" aria-label="Next">
+                                                    <img src="img/arw-right.svg" alt="">
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </nav>
                                 </div>
                             </div>
                         </div>
